0.61
    - Moved the docs around a little to better group all the testing
      functions together. [rt.cpan.org 8388]
    * Added a BAIL_OUT() function to Test::More [rt.cpan.org 8381]
    - Changed Test::Builder->BAILOUT to BAIL_OUT to match other method's
      naming conventions.  BAILOUT remains but is deprecated.

0.60  Tue May  3 14:20:34 PDT 2005

0.59_01  Tue Apr 26 21:51:12 PDT 2005
    * Test::Builder now has a create() method which allows you to create
      a brand spanking new Test::Builder object.
    * require_ok() was not working for single letter module names.
    * is_deeply() and eq_* now work with circular scalar references
      (Thanks Fergal)
    * Use of eq_* now officially discouraged.
    - Removed eq_* from the SYNOPSIS.
    - is_deeply(undef, $not_undef); now works. [rt.cpan.org 9441]
    - is_deeply() was mistakenly interpeting the same reference used twice
      in a data structure as being circular causing failures.
      [rt.cpan.org 11623]
    - Loading Test::Builder but not using it would interfere with the
      exit code if the code exited. [rt.cpan.org 12310]
    - is_deeply() diagnostics now disambiguate between stringified references
      and references. [rt.cpan.org 8865]
    - Files opened by the output methods are now autoflushed.
    - todo() now honors $Level when looking for $TODO.

0.54  Wed Dec 15 04:18:43 EST 2004
    * $how_many is optional for skip() and todo_skip().  Thanks to 
      Devel::Cover for pointing this out.
    - Removed a user defined function called err() in the tests to placate
      users of older versions of the dor patch before err() was weakend.
      [rt.cpan.org 8734]

0.53_01  Sat Dec 11 19:02:18 EST 2004
    - current_test() can now be set backward.
    - *output() methods now handle tied handles and *FOO{IO} properly.
    - maybe_regex() now handles undef gracefully.
    - maybe_regex() now handles 'm,foo,' style regexes.