@@ -10,20 +10,11 @@ BEGIN {
 # Can't use Test.pm, that's a 5.005 thing.
 package My::Test;
 
-print "1..2\n";
-
-my $test_num = 1;
-# Utility testing functions.
-sub ok ($;$) {
-    my($test, $name) = @_;
-    my $ok = '';
-    $ok .= "not " unless $test;
-    $ok .= "ok $test_num";
-    $ok .= " - $name" if defined $name;
-    $ok .= "\n";
-    print $ok;
-    $test_num++;
-}
+# This has to be a require or else the END block below runs before
+# Test::Builder's own and the ending diagnostics don't come out right.
+require Test::Builder;
+my $TB = Test::Builder->create;
+$TB->plan(tests => 2);
 
 
 package main;
@@ -46,7 +37,7 @@ ok(1, 'Car');
 ok(0, 'Sar');
 
 END {
-    My::Test::ok($$out eq <<OUT);
+    $TB->is_eq($$out, <<OUT);
 1..3
 ok 1 - Foo
 not ok 2 - Bar
@@ -55,9 +46,11 @@ ok 4 - Car
 not ok 5 - Sar
 OUT
 
-    My::Test::ok($$err eq <<ERR);
-#     Failed test ($0 at line 31)
-#     Failed test ($0 at line 34)
+    $TB->is_eq($$err, <<ERR);
+#   Failed test 'Bar'
+#   in $0 at line 31.
+#   Failed test 'Sar'
+#   in $0 at line 34.
 # Looks like you planned 3 tests but ran 2 extra.
 ERR
 
