@@ -60,8 +60,10 @@ not ok 5 - damnit
 OUT
 
     My::Test::ok($$err eq <<ERR);
-#     Failed test ($0 at line 38)
-#     Failed test ($0 at line 39)
+#   Failed test 'oh no!'
+#   in $0 at line 38.
+#   Failed test 'damnit'
+#   in $0 at line 39.
 # Looks like you failed 2 tests of 5.
 ERR
 
